# StyxTelegramBotFramework

./: .gitignore  CMakeLists.txt  Doxyfile_CN  Doxyfile_EN  README.md  README.zh-CN.md
Docs/: CONTRIBUTING.md  CONTRIBUTING.zh-CN.md
Docs/CN/html/: Application_8CPP.html  Application_8CPP__incl.map  Application_8CPP__incl.md5  Application_8HPP.html  Application_8HPP__dep__incl.map  Application_8HPP__dep__incl.md5  Application_8HPP__incl.map  Application_8HPP_source.html  BotManage_8CPP.html  BotManage_8HPP.html  BotManage_8HPP.js  BotManage_8HPP__dep__incl.map  BotManage_8HPP__incl.md5  BotManage_8HPP_source.html  CHANGELOG_8md.html  CONTRIBUTING_8md.html  CONTRIBUTING_8zh-CN_8md.html  Docs_2README_8md.html  Docs_2README_8zh-CN_8md.html  Doxygen_2Theme_2Awesome_2README_8md.html  EnvironmentSetup_8CPP.html  EnvironmentSetup_8CPP__incl.map  EnvironmentSetup_8CPP__incl.md5  EnvironmentSetup_8HPP.html  EnvironmentSetup_8HPP.js  EnvironmentSetup_8HPP__dep__incl.md5  EnvironmentSetup_8HPP__incl.md5  EnvironmentSetup_8HPP_source.html  Examples_2MyFirstPlugin_2Build_2CMakeFiles_23_828_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  Examples_2MyFirstPlugin_2Build_2CMakeFiles_23_828_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.js  FrameworkLogger_8HPP.html  FrameworkLogger_8HPP.js  FrameworkLogger_8HPP__dep__incl.map  FrameworkLogger_8HPP__dep__incl.md5  FrameworkLogger_8HPP__incl.md5  FrameworkLogger_8HPP_source.html  FrameworkServiceInterface_8HPP.html  FrameworkServiceInterface_8HPP__incl.map  FrameworkServiceInterface_8HPP__incl.md5  FrameworkServiceInterface_8HPP_source.html  (+1590 more)
Docs/CN/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  (+130 more)
Docs/EN/html/: Application_8CPP.html  Application_8CPP__incl.md5  Application_8HPP.html  Application_8HPP.js  Application_8HPP__dep__incl.map  Application_8HPP__dep__incl.md5  Application_8HPP__incl.md5  Application_8HPP_source.html  BotManage_8CPP.html  BotManage_8CPP__incl.map  BotManage_8CPP__incl.md5  BotManage_8HPP.html  BotManage_8HPP__dep__incl.md5  BotManage_8HPP__incl.map  BotManage_8HPP_source.html  CHANGELOG_8md.html  CONTRIBUTING_8md.html  CONTRIBUTING_8zh-CN_8md.html  Docs_2README_8md.html  Docs_2README_8zh-CN_8md.html  Doxygen_2Theme_2Awesome_2README_8md.html  EnvironmentSetup_8CPP.html  EnvironmentSetup_8CPP__incl.md5  EnvironmentSetup_8HPP.html  EnvironmentSetup_8HPP.js  EnvironmentSetup_8HPP__dep__incl.map  EnvironmentSetup_8HPP__incl.map  EnvironmentSetup_8HPP_source.html  Examples_2MyFirstPlugin_2Build_2CMakeFiles_23_828_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  FrameworkLogger_8HPP.html  FrameworkLogger_8HPP__incl.map  FrameworkLogger_8HPP_source.html  FrameworkServiceInterface_8HPP.html  FrameworkServiceInterface_8HPP.js  FrameworkServiceInterface_8HPP__dep__incl.map  FrameworkServiceInterface_8HPP__dep__incl.md5  FrameworkServiceInterface_8HPP_source.html  FrameworkServices_8HPP.html  FrameworkServices_8HPP__dep__incl.map  FrameworkServices_8HPP__dep__incl.md5  (+1603 more)
Examples/MyFirstPlugin/: CMakeLists.txt
Examples/MyFirstPlugin/Src/: MyFirstPlugin.CPP  MyFirstPlugin.HPP
Include/Core/: Application.HPP
Include/Core/System/: EnvironmentSetup.HPP  FrameworkLogger.HPP  FrameworkRunTime.HPP  FrameworkServices.HPP  LogCollector.HPP  SingletonInstanceControl.HPP  SystemStructure.HPP
Include/NetWork/: NetworkManage.HPP  TelegramHTTPClient.HPP
Include/Plugins/: BotManage.HPP  PluginManage.HPP
Include/TerminalUserInterface/: TUIBaseClass.HPP  TUILogPage.HPP  TUIManage.HPP  TUIPluginPage.HPP  TUISettingsPage.HPP  TUIStatusPage.HPP  TUITokenPage.HPP
Language/: StyxTelegramBotFramework.pot
Language/zh_CN/LC_MESSAGES/: StyxTelegramBotFramework.mo  StyxTelegramBotFramework.po
PluginSDK/Include/: FrameworkServiceInterface.HPP  LoggerInterface.HPP  PluginInterface.HPP  TelegramDataStructure.HPP
Src/: Main.CPP
Src/Core/: Application.CPP
Src/Core/System/: EnvironmentSetup.CPP  FrameworkRunTime.CPP  LogCollector.CPP  SingletonInstanceControl.CPP  SystemStructure.CPP
Src/NetWork/: NetworkManage.CPP  TelegramHTTPClient.CPP
Src/Plugins/: BotManage.CPP  PluginManage.CPP
Src/TerminalUserInterface/: TUILogPage.CPP  TUIManage.CPP  TUIPluginPage.CPP  TUISettingsPage.CPP  TUIStatusPage.CPP  TUITokenPage.CPP
(+132 files in other folders)
